--- a/themes/mrg/css/sass/main.scss
+++ b/themes/mrg/css/sass/main.scss
@@ -6,5 +6,17 @@ $main-font: 'Muli', Arial, sans-serif;
 $font-awesome-normal: "Font Awesome 5 Free";
 $font-awesome-brands: "Font Awesome 5 Brands";
 
+
+.visually-hide {
+	position: absolute;
+	display: inline-block;
+	width:  1px;
+	height: 1px;
+	overflow: hidden;
+	color: transparent;
+	background: transparent;
+}
+
+
 @import "_mrg-fixes";
 @import "_mini-article";
