--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -690,9 +690,18 @@ body.page-1er-congreso-internacional-educacion-e-inclusion-desde-el-sur .profesi
 body.page-1er-congreso-internacional-educacion-e-inclusion-desde-el-sur .profesionales-videos a {
   max-width: 300px;
   margin: 0.8em;
+  position: relative;
 }
 body.page-1er-congreso-internacional-educacion-e-inclusion-desde-el-sur .profesionales-videos a:hover {
   opacity: 0.7;
+}
+body.page-1er-congreso-internacional-educacion-e-inclusion-desde-el-sur .profesionales-videos a::after {
+  content: "";
+  background: url(../js/mediaelement/bigplay.png) top center no-repeat;
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  top: 40px;
 }
 
 .effect-enlarge-shadow:hover {
