--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -871,9 +871,19 @@ body.page-1er-congreso-internacional-educacion-e-inclusion-desde-el-sur {
 		a {
 			max-width: 300px;
 			margin: 0.8em;
+			position: relative;
 			
 			&:hover {
 				opacity: 0.7;
+			}
+			
+			&::after {
+				content:"";
+				background: url(../js/mediaelement/bigplay.png) top center no-repeat;
+				width: 100%;
+				height: 100px;
+				position: absolute;
+				top: 40px;
 			}
 		}
 	}
