--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -741,7 +741,7 @@ body.page-espacio-tecnologico fieldset.expand-sub-items > p {
 
 .box_pic-text-caption-wrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 @media screen and (max-width: 500px) {
